# saxophone

./: .gitignore  0.npz  1.npz  2.npz  3.npz  4.npz  Athermal_Linear_Elasticity.ipynb  README.md  allostery.ipynb  allostery_explicit.ipynb  auxetic.ipynb  dispersion_line.py  energies.py  jaxnets.html  jaxnets.ipynb  jaxnets.qmd  jaxnets.yml  main.ipynb  main.py  makeinit.ipynb  minimize.ipynb  optimize_aging_solo.py  output.txt  pyproject.toml  simulation.py  solo.py  test-auxetic.ipynb  test.py  test.txt  utils.py  visualize.py
.ipynb_checkpoints/: analyze-checkpoint.ipynb  auxetic-checkpoint.ipynb  auxetic_explicit-checkpoint.ipynb  main-checkpoint.ipynb  simulation-checkpoint.py  utils-checkpoint.py
dispersion/: dispersion.py  dispersion_curves.ipynb
dispersion/.ipynb_checkpoints/: dispersion-checkpoint.py  dispersion_curves-checkpoint.ipynb
jaxnets/: energies.py  simulation.py  utils.py  visualize.py
jaxnets/.ipynb_checkpoints/: simulation-checkpoint.py  utils-checkpoint.py  visualize-checkpoint.py
runs/: 0.npz  analyze.ipynb  job.sbatch  test.py  test_nr_cores.sh
runs/bandgap_shift/: job.sh  main.py
runs/big_auxetic/: analyze copy.ipynb  job.sh  main.py
runs/decrease_sphere/: job.sh  main.py
runs/k_angle_decrease/: job.sh  main.py
runs/memor_test/: job.sh  main.py
runs/perturbation_sweep_acoustic/: analyze.ipynb  job.sh  main.py
runs/perturbation_sweep_auxetic/: analyze.ipynb  job.sh  main.py
runs/shift_bandgap/: job.sh
runs/shift_bandgap_close_to_open/: main.py
runs/shift_bandgap_open_to_close/: job.sh  main.py
runs/sweep_poisson/: analyze copy.html  analyze copy.ipynb  job.sh  main.py
runs/sweep_poisson_k_01/: job.sh  main.py
saxophone/: Untitled.ipynb  energies.py  main.py  simulation.py  utils.py  visualize.py
saxophone/.ipynb_checkpoints/: energies-checkpoint.py  simulation-checkpoint.py  utils-checkpoint.py  visualize-checkpoint.py
(+9 files in other folders)
