[tool.poetry]
name = "networks"
version = "0.1.0"
description = "For working with jax-md"
authors = ["Fabian Bylehn <bylehn@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jax-md = "^0.2.5"
pandas = "^2.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
