[tool.poetry]
name = "networks"
version = "0.1.0"
description = "For working with jax-md"
authors = ["Fabian Bylehn <bylehn@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^2.0.1"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
networkx = "^3.1"
nglview = "^3.0.4"
plotly = "^5.14.1"
jupyter-ai = "^2.1.0"
jupyterlab = ">=4.0,<5.0"
gpt4all = "^1.0.8"
boto3 = "^1.28.36"
jax-md = {path = "jax-md-jax-md-v0.2.24", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
